tests/ui/layout/invalid-unsized-const-eval.stderr
error[E0277]: the size for values of type `(dyn Sync + 'static)` cannot be known at compilation time
  --> $DIR/invalid-unsized-const-eval.rs:9:11
   |
LL |     data: (dyn Sync, ()),
   |           ^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Sync + 'static)`
   = note: only the last element of a tuple may have a dynamically sized type

error[E0080]: the type `(dyn Sync, ())` has an unknown layout
  --> $DIR/invalid-unsized-const-eval.rs:12:1
   |
LL | static EMPTY_SET: LazyLock = todo!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `EMPTY_SET` failed here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
